--- a/index.html
+++ b/index.html
@@ -1,10 +1,146 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://fonts.googleapis.com/css?family=Open+Sans"
+    />
     <meta charset="UTF-8" />
-    <title>Candy's Counselling</title>
-</head>
-<body>
-    
-</body>
+    <!-- Mobile Specific Metas
+	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>candyscounselling.com</title>
+    <!--[if lt IE 9]>
+      conditional comment (it works with IE6-8)
+      <script>
+        document.createElement("article");
+        document.createElement("aside");
+        document.createElement("footer");
+        document.createElement("header");
+        document.createElement("main");
+        document.createElement("nav");
+        document.createElement("section");
+      </script>
+    <![endif]-->
+
+    <link rel="stylesheet" href="css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="css/skeleton.css" type="text/css" />
+    <link rel="stylesheet" href="css/style-new.css" type="text/css" />
+    <script src="js/main.js"></script>
+  </head>
+
+  <body>
+    <div class="container">
+      <header class="banner">
+        <div class="row">
+          <div class="twelve columns">
+            <h1>Candy’s Counselling</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="twelve columns side-header">
+            <p class="title">
+              Candy Fathers<br />
+              Dip Couns. Accredited MBACP QTLS<br />
+              Person Centred Therapist<br />
+              Short &amp; Long Term Counselling in SE London
+            </p>
+          </div>
+        </div>
+      </header>
+
+      <div class="row">
+        <div class="twelve columns">
+          <nav>
+            <ul class="nav" id="navBar">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutme.html">About Me</a></li>
+              <li><a href="counselling.html">Counselling</a></li>
+              <li><a href="personalapproach.html">Personal Approach</a></li>
+              <li><a href="supervision.html">Supervision</a></li>
+              <li><a href="testimonials.html">Testimonials</a></li>
+              <li><a href="contact.html">Contact</a></li>
+              <li class="icon">
+                <a href="javascript:void(0);" onClick="openDrawerMenu()"
+                  >&#9776;</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="six columns">
+          <main>
+            <section>
+              <article class="aboutme">
+                <h2>
+                  About Me <br />
+                  &amp; My Qualifications
+                </h2>
+                <p class="maintext">
+                  I originally come from a catering background. I had a work
+                  colleague Vicky, who trained me as a manager for a well-known
+                  coffee chain. I remember her saying “I think you would make a
+                  really good counsellor because you look at things from a
+                  rounded perspective.” So I decided to complete an introductory
+                  counselling course and so began my journey to becoming a
+                  qualified counsellor. <br /><a
+                    href="aboutme.html"
+                    class="class2"
+                    >Read More</a
+                  >
+                </p>
+                <div>
+                  <img src="images/Candy.png" />
+                </div>
+              </article>
+            </section>
+          </main>
+        </div>
+        <div class="six columns">
+          <aside class="counselling six columns">
+            <h2>Counselling</h2>
+            <p class="maintext">
+              One in four people will experience mental ill health throughout
+              their life. So how can counselling be beneficial?
+            </p>
+            <p class="maintext">
+              Appointments / Candy’s Private Practice / Costs
+            </p>
+            <p><a href="counselling.html" class="class2">Read More</a></p>
+          </aside>
+          <aside class="person six columns">
+            <h2>Person Centered Approach</h2>
+            <p class="maintext">
+              One in four people will experience mental ill health throughout
+              their life. So how can counselling be beneficial? <br /><a
+                href="personalapproach.html"
+                class="class2"
+                >Read More</a
+              >
+            </p>
+          </aside>
+          <aside class="supervision six columns">
+            <h2>Supervision / Who's Eligible?</h2>
+            <p class="maintext">
+              Professionals who work with clients who face emotional crisis need
+              regular support without that support their professionalism could
+              be impacted.
+            </p>
+            <p><a href="supervision.html" class="class2">Read More</a></p>
+          </aside>
+          <aside class="contact six columns">
+            <h2>Contact Useful Links</h2>
+            <p><a href="contact.html" class="class2">Read More</a></p>
+          </aside>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <p>© Candy's Counselling 2025</p>
+    </footer>
+  </body>
 </html>
